# OcrChunkingServer

./: Makefile  README.md  pyproject.toml
app/: main.py
app/api/routers/v1/: ocr_chunking.py
app/api/schemas/: ocr_chunking.py
app/clients/: azure_di_client.py
app/config/: settings.py
app/services/: chunking_service.py  ocr_service.py
app/utils/: text_headings.py  webhook_client.py
docker/:  .gitignore  .env  .env.example  Dockerfile  docker-compose.yml  install.sh
